--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  sqflite:
-  path:
+  sqflite: ^2.0.3+1
+  path: ^1.8.1
+  http: ^0.13.5
+  sqlite_viewer: ^1.0.5
 
 dev_dependencies:
   flutter_test:
