Feat: download media to local storage (Known issue: update sqlite local path not work every time)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  sqflite: ^2.0.3+1
+  sqflite: ^2.2.2
   path: ^1.8.1
+  path_provider: ^2.0.11
+  path_provider_android: ^2.0.22
+  path_provider_ios: ^2.0.11
   http: ^0.13.5
   sqlite_viewer: ^1.0.5
+  flutter_downloader: ^1.9.1
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
