--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   sqlite_viewer: ^1.0.5
   flutter_downloader: ^1.9.1
   uuid: ^3.0.6
+  loading_indicator: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +57,9 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+module:
+  androidX: true
 
 # The following section is specific to Flutter packages.
 flutter:
