Feat: Add photo view, improve ui

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   flutter_downloader: ^1.9.1
   uuid: ^3.0.6
   loading_indicator: ^3.1.0
-  image: ^3.3.0
+  anim_search_bar: ^2.0.3
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
